--- a/src/components/Skillset.css
+++ b/src/components/Skillset.css
@@ -65,12 +65,12 @@
   color: #727272;
 }
 .selected-skills {
-  height: 400px;
-  overflow: hidden;
-  width: 417px;
-  margin: auto;
-  background-color: darkseagreen;
+  height: 300px;
+  max-height: 300px;
+  width: 410px;
+  margin: auto auto 73px auto;
   text-align: start;
+  overflow-y: auto;
 }
 .skill-cont {
   display: flex;
@@ -78,15 +78,60 @@
   width: 100%;
   height: 54px;
   border: 1px solid #525557;
+  box-sizing: border-box;
   margin-bottom: 20px;
   align-items: center;
   font-family: Montserrat;
   font-style: italic;
   font-weight: normal;
-  font-size: 14px;
   line-height: 17px;
+  justify-content: space-between;
+  z-index: -1;
+}
+.skill-cont h2 {
+  font-size: 14px;
+}
+.skill {
+  width: 49px;
+  margin-left: 15px;
+}
+.exp {
+  width: 175px;
+  margin-right: 60px;
 }
 .delete-btn {
-  position: absolute;
-  right: 20px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.selected-skills::-webkit-scrollbar {
+  display: none;
+}
+.fa-circle {
+  color: #fe3b1f;
+  margin: 5px;
+  width: 19px;
+  height: 19px;
+  padding: 0px;
+}
+.pagination {
+  display: flex;
+  position: fixed;
+  bottom: 50px;
+  flex-direction: row;
+  left: 340px;
+  align-items: center;
+}
+.previous {
+  width: 18px;
+  height: 18px;
+  margin-right: 7px;
+}
+.dark {
+  opacity: 0.1;
+}
+input {
+  outline: none;
 }
