--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -23,7 +23,12 @@
   cursor: pointer;
   font-family: "Montserrat", sans-serif;
   font-size: 24px;
+  padding-top: 0px;
   margin-top: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
 }
 .submitted-apps {
   text-decoration: underline;
