--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -3,7 +3,8 @@
   background-image: url("../images/stars.png");
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  height: auto;
   text-align: center;
 }
 .welcome-title {
